fix scrollbar issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,35 +1,34 @@
 @tailwind base;
 
 @layer base {
-    html, body {
-        height: 100%;
-    }
+  html,
+  body {
+    height: 100%;
+  }
 }
 
 @tailwind components;
 @tailwind utilities;
 
 #__next {
-    height: 100%;
+  height: 100%;
 }
 
-/* width */
-::-webkit-scrollbar {
-    width: 8px;
-}
-  
-/* Track */
-::-webkit-scrollbar-track {
-    background: #fafafa;
-}
-  
-/* Handle */
-::-webkit-scrollbar-thumb {
+@media (min-width: 640px) {
+  body ::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  body ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  body ::-webkit-scrollbar-thumb {
     background: #c1c1c1;
     border-radius: 5px;
-}
-  
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #d7d7d7;
+  }
+
+  body ::-webkit-scrollbar-thumb:hover {
+    background: #adadad;
+  }
 }
